<resources>
    <string name="app_name">Math</string>
    <string name="sum">Сложение</string>
    <string name="sub">Вычитание</string>
    <string name="mul">Умножение</string>
    <string name="div">Деление</string>
    <string name="start">Начать</string>
    <string name="soon">Скоро</string>
    <string name="title">Название</string>

    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="ans">Ответить</string>
    <string name="del">Удалить</string>
</resources>